--- a/camera/src/main/res/values/strings.xml
+++ b/camera/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="record_permission_request">This sample needs permission for camera and audio recording.</string>
     <string name="record_camera_error">This device doesn\'t support Camera2 API.</string>
     <string name="record_intro_message">sss</string>
+    <string name="record_saved">视频保存成功 :</string>
 </resources>
